# OpenMap

./: CMakeLists.txt  LICENSE  README.md  TODO.txt
libs/ImGuizmo/: ImGuizmo.cpp
libs/LuaBridge3/: LuaBridge.hpp
libs/chaiscript/: LICENSE
libs/glad/: glad.c  glad.h
libs/raylib-gizmo/: raygizmo.c  raygizmo.h
src/: main.cpp
src/IMPLEMENTATIONS/core/: GUI.hpp  Renderer.hpp  Serializer.hpp  Windower.hpp
src/IMPLEMENTATIONS/core/IDraw/: RaylibDrawer.hpp
src/IMPLEMENTATIONS/core/IGUI/: DearImGuiGUI.hpp  RayguiGUI.hpp
src/IMPLEMENTATIONS/core/IInput/: RaylibInput.hpp
src/IMPLEMENTATIONS/core/ILua/: Lua.hpp
src/IMPLEMENTATIONS/core/IRenderer/: OpenGLRenderer.hpp
src/IMPLEMENTATIONS/core/ISerializer/: JSONSerializer.hpp
src/IMPLEMENTATIONS/core/IWindower/: GLFWWindower.hpp
src/IMPLEMENTATIONS/editor/: Editor.hpp
src/IMPLEMENTATIONS/editor/IEditor/: Editor.hpp
src/INTERFACES/core/: IDraw.hpp  IGUI.hpp  IInput.hpp  ILua.hpp  IRenderer.hpp  ISerializer.hpp  IWindower.hpp
src/INTERFACES/editor/: IEditor.hpp
